@@ -1,3 +1,9 @@
+2000-06-29  James Henstridge  <james@daa.com.au>
+
+	* gobjectmodule.c: use pygobject.h.
+
+	* pygobject.h: header for modules that want to use GObject.
+
 2000-06-28  James Henstridge  <james@daa.com.au>
 
 	* gobjectmodule.c: add get_data / set_data methods.
